kubernetes/aws-lb-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-load-balancer-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: aws-load-balancer-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
      - name: controller
        image: amazon/aws-load-balancer-controller:v2.7.2
        args:
        - --cluster-name=my-learning-eks-cluster
        - --ingress-class=alb
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
