kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1                    # Changed from 1 to 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      tolerations:                    # Add tolerations to use spot nodes
      - key: spot-instance
        operator: Equal
        value: "true"
        effect: NoSchedule
      containers:
        - name: webapp
          image: nanajanashia/k8s-demo-app:v1.0
          ports:
            - containerPort: 3000
---
# service for web app deployment
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP           # Changed to ClusterIP for internal access via gateway
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
